--- a/logo-design/styles.css
+++ b/logo-design/styles.css
@@ -5,8 +5,9 @@
 :root {
   font-family: 'Roboto', sans-serif;
   font-size: 1em;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box; }
+  letter-spacing: 1px;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box; }
 
 body {
   margin: 0;
@@ -17,42 +18,49 @@ body {
   max-width: 1000px;
   width: 100%; }
 
+@media screen and (max-width: 599px) {
+  .container {
+    width: 90%; } }
+
+@media screen and (min-width: 600px) {
+  .container {
+    width: 90%; } }
+
 /* =================
     HEADER    
  ================= */
 .header {
-  width: 100%;
-  height: 100%;
-  min-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
   background: url("./img/fon.jpg") no-repeat right;
+  background-size: cover;
   color: white; }
 
 .header-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  padding-top: 3em; }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column; }
 
 .header-logo {
-  width: 50%;
   font-size: 2em; }
-
-.header-logo span {
-  font-weight: 100; }
-
-.header-logo strong {
-  font-weight: 900; }
+  .header-logo span {
+    font-weight: 100; }
+  .header-logo strong {
+    font-weight: 900; }
 
 .header-contacts {
   display: -webkit-box;
@@ -62,11 +70,9 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
   font-size: 1.2rem;
-  font-weight: 300; }
+  font-weight: 300;
+  opacity: 0.8; }
 
 .header-contacts a,
 .header-contacts span {
@@ -74,14 +80,41 @@ body {
   text-decoration: none; }
 
 .header-utp {
-  width: 100%;
-  font-size: 4em;
-  font-weight: 900;
-  text-align: center;
-  padding: 3em 0; }
+  font-weight: 900; }
+  .header-utp span {
+    color: #93c9eb; }
 
-.header-utp span {
-  color: aqua; }
+.header-arrow {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+  .header-arrow i {
+    font-size: 2em;
+    opacity: 0.8; }
+
+@media screen and (max-width: 599px) {
+  .header {
+    background: -webkit-gradient(linear, left top, right top, from(#313574), to(#4f58d4));
+    background: linear-gradient(to right, #313574, #4f58d4); }
+  .header-utp {
+    font-size: 4.5em; } }
+
+@media screen and (min-width: 600px) {
+  .header {
+    background-position: top right; }
+  .header-utp {
+    font-size: 6em; } }
+
+@media screen and (min-width: 900px) {
+  .header-utp {
+    font-size: 7em; } }
+
+@media screen and (min-width: 1200px) {
+  .header-utp {
+    font-size: 11em; } }
 
 /* =================
     
