--- a/logo-design/styles.scss
+++ b/logo-design/styles.scss
@@ -6,7 +6,8 @@
 :root {
   font-family: 'Roboto', sans-serif;
   font-size: 1em;
-  box-sizing: border-box;
+  letter-spacing: 1px;
+  box-sizing: content-box;
 }
 
 body {
@@ -19,44 +20,61 @@ body {
   width: 100%;
 }
 
+// CONSTANTS
+$main-opacity: .8;
+
+@media screen and (max-width: 599px) {
+  .container {
+    width: 90%;
+  }
+}
+@media screen and (min-width: 600px) {
+  .container {
+    width: 90%;
+  }
+}
+
 /* =================
     HEADER    
  ================= */
 
 .header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   min-height: 100vh;
-  display: flex;
-  justify-content: center;
   background: url('./img/fon.jpg') no-repeat right;
+  background-size: cover;
   color: white;
 }
 
 .header-wrapper {
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  padding-top: 3em;
+  flex-direction: column;
 }
+
 .header-logo {
-  width: 50%;
   font-size: 2em;
-}
-.header-logo span {
-  font-weight: 100;
-}
-.header-logo strong {
-  font-weight: 900;
+
+  span {
+    font-weight: 100;
+  }
+  
+  strong {
+    font-weight: 900;
+  }
 }
 
 .header-contacts {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
   font-size: 1.2rem;
   font-weight: 300;
+  opacity: $main-opacity;
 }
+
 .header-contacts a,
 .header-contacts span {
   color: white;
@@ -64,16 +82,49 @@ body {
 }
 
 .header-utp {
-  width: 100%;
-  font-size: 4em;
   font-weight: 900;
-  text-align: center;
-  padding: 3em 0;
-}
-.header-utp span {
-  color: aqua;
+
+  span {
+    color: #93c9eb;
+  }
 }
 
+.header-arrow {
+  display: flex;
+  justify-content: center;
+  i {
+    font-size: 2em;
+    opacity: $main-opacity;
+  }
+}
+
+@media screen and (max-width: 599px) {
+  .header {
+    background: linear-gradient(to right, #313574, #4f58d4);
+  }
+  .header-utp {
+    font-size: 4.5em;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .header {
+    background-position: top right;
+  }
+  .header-utp {
+    font-size: 6em;
+  }
+}
+@media screen and (min-width: 900px) {
+  .header-utp {
+    font-size: 7em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-utp {
+    font-size: 11em;
+  }
+}
 
 
 /* =================
