--- a/logo-design/styles.scss
+++ b/logo-design/styles.scss
@@ -21,8 +21,27 @@ body {
   width: 100%;
 }
 
+.arrow {
+  display: flex;
+  justify-content: center;
+  i {
+    font-size: 2em;
+    animation: change 5s infinite ease-in-out alternate;
+  }
+}
+
+@keyframes change {
+  0% {color:#F78FAD;}
+  20% {color: #41D8DD;}
+  40% {color: #54E38E;}
+  60% {color: #E13680;}
+  80% {color: #6DE195;}
+  100% {color: #A16BFE;}
+}
+
 // CONSTANTS
 $main-opacity: .8;
+$main-font-color: #323676;
 
 @media screen and (max-width: 599px) {
   .container {
@@ -90,24 +109,6 @@ $main-opacity: .8;
   }
 }
 
-.header-arrow {
-  display: flex;
-  justify-content: center;
-  i {
-    font-size: 2em;
-    animation: change 5s infinite ease-in-out alternate;
-  }
-}
-
-@keyframes change {
-  0% {color:#F78FAD;}
-  20% {color: #41D8DD;}
-  40% {color: #54E38E;}
-  60% {color: #E13680;}
-  80% {color: #6DE195;}
-  100% {color: #A16BFE;}
-}
-
 @media screen and (max-width: 599px) {
   .header {
     background: linear-gradient(to right, #313574, #4f58d4);
@@ -155,7 +156,8 @@ $main-opacity: .8;
   }
 
   .slider-caption {
-    color: #323676;
+    font-weight: 300;
+    color: $main-font-color;
     text-align: center;
   }
 
@@ -227,5 +229,50 @@ $main-opacity: .8;
 }
 
 /* =================
+    TERMS
+ ================= */
+  .terms {
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    background-color: rgb(250, 250, 250);
+  }
+
+  .terms-head {
+    color:  $main-font-color;
+  }
+
+  .terms-list {
+    padding: 0;
+    list-style: none;
+  }
+  .terms-item {
+    font-weight: 300;
+    color: $main-font-color;
+  }
+
+
+@media screen and (max-width: 599px) {
+  .terms-wrapper {
+    padding: 2em 0;
+  }
+}
+@media screen and (min-width: 600px) {
+  .terms-wrapper {
+    padding: 2em 0;
+  }
+}
+@media screen and (min-width: 900px) {
+  .terms-wrapper {
+    padding: 4em 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .terms-wrapper {
+    padding: 6em 0;
+  }
+}
+
+ /* =================
     
  ================= */
