--- a/logo-design/styles.css
+++ b/logo-design/styles.css
@@ -114,7 +114,8 @@ body {
       -ms-flex-pack: center;
           justify-content: center; }
   .arrow i {
-    font-size: 2em; }
+    font-size: 2em;
+    color: #323676; }
 
 .header-wrapper .arrow {
   display: -webkit-box;
@@ -309,6 +310,13 @@ body {
 
 .woman .main-img:last-child {
   background: linear-gradient(45deg, #764D6F, #47256e); }
+
+.packlabs .main-img:first-child {
+  background: -webkit-gradient(linear, left top, left bottom, from(#fafafa), to(#f1f1f1));
+  background: linear-gradient(to bottom, #fafafa, #f1f1f1); }
+
+.packlabs .main-img:last-child {
+  background: linear-gradient(45deg, #006868, #47256e); }
 
 @media screen and (max-width: 599px) {
   .slider-wrapper {
