--- a/logo-design/styles.scss
+++ b/logo-design/styles.scss
@@ -28,7 +28,7 @@ body {
   justify-content: center;
   i {
     font-size: 2em;
-    color: $main-font-color;
+    color: #323676;
   }
 }
 
@@ -195,6 +195,10 @@ $main-font-color: #323676;
   .woman { 
     .main-img:first-child {background: linear-gradient(to bottom, rgb(8, 30, 59), rgb(7, 1, 24));}
     .main-img:last-child {background: linear-gradient(45deg,#764D6F, #47256e);}
+  }
+  .packlabs { 
+    .main-img:first-child {background: linear-gradient(to bottom, rgb(250, 250, 250), rgb(241, 241, 241));}
+    .main-img:last-child {background: linear-gradient(45deg,#006868, #47256e);}
   }
 
 
