--- a/logo-design/styles.css
+++ b/logo-design/styles.css
@@ -223,18 +223,31 @@ body {
   .header-utp span {
     color: #93c9eb; }
 
+.header-free {
+  padding: 0;
+  font-size: 1.2rem;
+  font-weight: 300;
+  list-style: none;
+  opacity: 0.8; }
+  .header-free li:first-child {
+    font-size: 1.4rem;
+    font-weight: 600; }
+
 @media screen and (max-width: 599px) {
   .header {
     background: -webkit-gradient(linear, left top, right top, from(#313574), to(#4f58d4));
     background: linear-gradient(to right, #313574, #4f58d4); }
   .header-utp {
+    margin-bottom: 0;
     font-size: 4.3em; } }
 
 @media screen and (min-width: 600px) {
   .header {
     background-position: top right; }
   .header-utp {
-    font-size: 6em; } }
+    font-size: 6em; }
+  .header-utp {
+    margin-bottom: inherit; } }
 
 @media screen and (min-width: 900px) {
   .header-utp {
@@ -400,6 +413,10 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center; }
+
+.questions-wrapper p {
+  font-weight: 300;
+  color: #323676; }
 
 .questions-head {
   color: #323676; }
