--- a/logo-design/styles.scss
+++ b/logo-design/styles.scss
@@ -120,11 +120,25 @@ $main-font-color: #323676;
   }
 }
 
+.header-free {
+  padding: 0;
+  font-size: 1.2rem;
+  font-weight: 300;
+  list-style: none;
+  opacity: $main-opacity;
+
+  li:first-child {
+    font-size: 1.4rem;
+    font-weight: 600;
+  }
+}
+
 @media screen and (max-width: 599px) {
   .header {
     background: linear-gradient(to right, #313574, #4f58d4);
   }
   .header-utp {
+    margin-bottom: 0;
     font-size: 4.3em;
   }
 }
@@ -135,6 +149,9 @@ $main-font-color: #323676;
   }
   .header-utp {
     font-size: 6em;
+  }
+  .header-utp {
+    margin-bottom: inherit;
   }
 }
 @media screen and (min-width: 900px) {
@@ -298,6 +315,11 @@ $main-font-color: #323676;
  .questions {
   display: flex;
   justify-content: center;
+}
+
+.questions-wrapper p{
+  font-weight: 300;
+  color: $main-font-color;
 }
 
 .questions-head {
