--- a/logo-design/styles.css
+++ b/logo-design/styles.css
@@ -268,6 +268,11 @@ body {
       -ms-flex-pack: center;
           justify-content: center; }
 
+.slider-openAll {
+  font-weight: 600;
+  color: #323676;
+  cursor: pointer; }
+
 .slider-main-img {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -365,6 +370,55 @@ body {
     padding: 6em 0; } }
 
 /* =================
+    WORKS
+ ================= */
+.works {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #f0f0f0;
+  cursor: pointer;
+  overflow-y: scroll;
+  z-index: 1000; }
+
+.works-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+
+.works-close {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  padding: 1em;
+  background: #323676;
+  color: rgba(255, 255, 255, 0.8);
+  text-align: center; }
+
+.works-img {
+  width: 150px;
+  margin: 1px; }
+
+@media screen and (max-width: 599px) {
+  .works-img {
+    width: 150px;
+    height: 150px; } }
+
+@media screen and (min-width: 1200px) {
+  .works-img {
+    width: 250px;
+    height: auto; } }
+
+/* =================
     TERMS
  ================= */
 .terms {
@@ -379,11 +433,22 @@ body {
 .terms-head {
   color: #323676; }
 
+.terms-minimum {
+  font-weight: 300;
+  color: #323676; }
+
 .terms-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   padding: 0;
   list-style: none; }
 
-.terms-item {
+.terms-list-item {
   font-weight: 300;
   color: #323676; }
 
@@ -447,10 +512,12 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-color: #323676; }
+  background-color: #323676;
+  z-index: 1; }
 
 .footer-head {
-  color: #fafafa; }
+  color: white;
+  opacity: 0.8; }
 
 @media screen and (max-width: 599px) {
   .footer-wrapper {
