--- a/logo-design/styles.scss
+++ b/logo-design/styles.scss
@@ -175,6 +175,12 @@ $main-font-color: #323676;
    justify-content: center;
  }
 
+ .slider-openAll {
+   font-weight: 600;
+   color: $main-font-color;
+   cursor: pointer;
+  }
+
  .slider-main-img {
     display: flex;
   }
@@ -265,6 +271,54 @@ $main-font-color: #323676;
 }
 
 /* =================
+    WORKS
+ ================= */
+.works {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(240,240,240,1);
+  cursor: pointer;
+  overflow-y: scroll;
+  z-index: 1000;
+}
+
+.works-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.works-close {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  padding: 1em;
+  background: $main-font-color;
+  color: rgba(255,255,255,.8);
+  text-align: center;
+}
+
+.works-img {
+  width: 150px;
+  margin: 1px;
+}
+@media screen and (max-width: 599px) {
+  .works-img {
+    width: 150px;
+    height: 150px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .works-img {
+    width: 250px;
+    height: auto;
+  }
+}
+/* =================
     TERMS
  ================= */
   .terms {
@@ -277,11 +331,18 @@ $main-font-color: #323676;
     color:  $main-font-color;
   }
 
+  .terms-minimum {
+    font-weight: 300;
+    color: $main-font-color;
+  }
+  
   .terms-list {
+    display: flex;
+    flex-direction: column;
     padding: 0;
     list-style: none;
   }
-  .terms-item {
+  .terms-list-item {
     font-weight: 300;
     color: $main-font-color;
   }
@@ -290,6 +351,9 @@ $main-font-color: #323676;
 @media screen and (max-width: 599px) {
   .terms-wrapper {
     padding: 2em 0;
+  }
+  .terms-list-item {
+
   }
 }
 @media screen and (min-width: 600px) {
@@ -354,10 +418,12 @@ $main-font-color: #323676;
   display: flex;
   justify-content: center;
   background-color: $main-font-color;
+  z-index: 1;
 }
 
 .footer-head {
-  color: rgb(250, 250, 250);
+  color: white;
+  opacity: $main-opacity;
 }
 
 @media screen and (max-width: 599px) {
