--- a/logo-design/styles.scss
+++ b/logo-design/styles.scss
@@ -297,6 +297,7 @@ $main-font-color: #323676;
   top: 0;
   width: 100%;
   padding: 1em;
+  margin-top: 0;
   background: $main-font-color;
   color: rgba(255,255,255,.8);
   text-align: center;
