--- a/logo-design/styles.scss
+++ b/logo-design/styles.scss
@@ -312,6 +312,12 @@ $main-font-color: #323676;
     height: 150px;
   }
 }
+@media screen and (min-width: 600px) {
+  .works-img {
+    width: 150px;
+    height: 150px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .works-img {
     width: 250px;
