--- a/media/styles.css
+++ b/media/styles.css
@@ -48,7 +48,7 @@ a {
 
 @media screen and (max-width: 599px) {
   :root {
-    font-size: .9em; } }
+    font-size: 0.9em; } }
 
 @media screen and (min-width: 600px) {
   :root {
@@ -96,9 +96,10 @@ header {
     header .header__text span {
       margin-top: 1em;
       margin-bottom: 1em;
-      padding: .2em;
+      padding: 0.2em;
       background-color: #333333;
-      color: #fff; }
+      color: #fff;
+      border-radius: 2px; }
     header .header__text .icons {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -108,7 +109,7 @@ header {
               align-items: flex-start;
       margin-top: 1em; }
       header .header__text .icons a {
-        margin-right: .5em; }
+        margin-right: 0.5em; }
       header .header__text .icons .resume {
         background-color: #d32222;
         font-weight: 300;
@@ -117,10 +118,6 @@ header {
 
 @media screen and (max-width: 599px) {
   header {
-    min-height: 100vh;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -130,7 +127,11 @@ header {
             flex-direction: column;
     -webkit-box-align: center;
         -ms-flex-align: center;
-            align-items: center; }
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    min-height: 100vh; }
     header img {
       width: 200px;
       margin-left: 0;
@@ -150,7 +151,7 @@ header {
               align-items: center;
       margin-top: 1.5em; }
       header .header__text span {
-        padding: .4em; }
+        padding: 0.4em; }
       header .header__text a {
         font-size: 1.3em; }
       header .header__text .icons {
@@ -165,7 +166,7 @@ header {
           width: 30px;
           height: 30px; }
         header .header__text .icons .resume {
-          padding: .45em;
+          padding: 0.45em;
           font-size: 1rem; } }
 
 @media screen and (min-width: 600px) {
@@ -177,8 +178,8 @@ header {
       width: 38px;
       height: 38px; }
     header .header__text .icons .resume {
-      padding: .6em;
-      font-size: .95rem; } }
+      padding: 0.6em;
+      font-size: 0.95rem; } }
 
 @media screen and (min-width: 900px) {
   header {
@@ -189,8 +190,8 @@ header {
       width: 45px;
       height: 45px; }
     header .header__text .icons .resume {
-      padding: .6em;
-      font-size: .95rem; } }
+      padding: 0.6em;
+      font-size: 0.95rem; } }
 
 @media screen and (min-width: 1200px) {
   header {
@@ -201,16 +202,115 @@ header {
       width: 50px;
       height: 50px; }
     header .header__text .icons .resume {
-      padding: .9em;
-      font-size: .7rem; } }
+      padding: 0.9em;
+      font-size: 0.7rem; } }
 
 /*
 ===============
 PROJECTS
 ===============
 */
+.projects {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  margin-bottom: 2em; }
+  .projects h2 {
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    font-family: 'Orbitron';
+    letter-spacing: 1px; }
+  .projects .projects-wrapper {
+    width: 100%; }
+    .projects .projects-wrapper .project {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      width: 100%; }
+      .projects .projects-wrapper .project .project-img {
+        width: 50%; }
+        .projects .projects-wrapper .project .project-img h3 {
+          margin-bottom: 0.5em; }
+        .projects .projects-wrapper .project .project-img img {
+          width: 100%;
+          -webkit-box-shadow: 0px 0px 5px #999;
+                  box-shadow: 0px 0px 5px #999;
+          border-radius: 2px; }
+        .projects .projects-wrapper .project .project-img .links {
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-align: baseline;
+              -ms-flex-align: baseline;
+                  align-items: baseline; }
+          .projects .projects-wrapper .project .project-img .links a {
+            margin-right: 1em;
+            padding-left: 0.5em;
+            padding-right: 0.5em;
+            font-size: 0.8rem;
+            color: #fff;
+            background-color: #d32222;
+            border-radius: 2px; }
+      .projects .projects-wrapper .project .description {
+        width: 50%;
+        padding-left: 2em;
+        text-align: right; }
+        .projects .projects-wrapper .project .description p {
+          font-weight: 300; }
+    .projects .projects-wrapper .project:nth-child(even) {
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: reverse;
+          -ms-flex-direction: row-reverse;
+              flex-direction: row-reverse; }
+      .projects .projects-wrapper .project:nth-child(even) .project-img h3 {
+        text-align: right; }
+      .projects .projects-wrapper .project:nth-child(even) .project-img .links {
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: reverse;
+            -ms-flex-direction: row-reverse;
+                flex-direction: row-reverse; }
+        .projects .projects-wrapper .project:nth-child(even) .project-img .links a {
+          margin-right: 0;
+          margin-left: 1em; }
+      .projects .projects-wrapper .project:nth-child(even) .description {
+        text-align: left;
+        padding-left: 0;
+        padding-right: 2em; }
+
+@media screen and (min-width: 600px) {
+  .projects {
+    max-width: 600px; } }
+
+@media screen and (min-width: 900px) {
+  .projects {
+    max-width: 900px; } }
+
+@media screen and (min-width: 1200px) {
+  .projects {
+    max-width: 1200px; } }
+
 /*
 ===============
 FOOTER
 ===============
 */
+footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100px;
+  background-color: #333333; }
