--- a/media/styles.scss
+++ b/media/styles.scss
@@ -58,7 +58,7 @@ a {
 
 @media screen and (max-width: 599px) {
   :root {
-    font-size: .9em;
+    font-size: 0.9em;
   }
 }
 @media screen and (min-width: 600px) {
@@ -97,15 +97,16 @@ header {
     span {
       margin-top: 1em;
       margin-bottom: 1em;
-      padding: .2em;
+      padding: 0.2em;
       background-color: $text-color;
       color: #fff;
+      border-radius: 2px;
     }
     .icons {
       @include flex-row(flex-start);
       margin-top: 1em;
       a {
-        margin-right: .5em;
+        margin-right: 0.5em;
       }
       .resume {
         background-color: #d32222;
@@ -119,9 +120,9 @@ header {
 
 @media screen and (max-width: 599px) {
   header {
-    min-height: 100vh;
-    justify-content: center;
     @include flex-column(center);
+    justify-content: center;
+    min-height: 100vh;
     img {
       width: 200px;
       margin-left: 0;
@@ -131,7 +132,7 @@ header {
       @include flex-column(center);
       margin-top: 1.5em;
       span {
-        padding: .4em;
+        padding: 0.4em;
       }
       a {
         font-size: 1.3em;
@@ -144,7 +145,7 @@ header {
           height: 30px;
         }
         .resume {
-          padding: .45em;
+          padding: 0.45em;
           font-size: 1rem;
         }
       }
@@ -164,8 +165,8 @@ header {
           height: 38px;
         }
         .resume {
-          padding: .6em;
-          font-size: .95rem;
+          padding: 0.6em;
+          font-size: 0.95rem;
         }
       }
     }
@@ -184,8 +185,8 @@ header {
           height: 45px;
         }
         .resume {
-          padding: .6em;
-          font-size: .95rem;
+          padding: 0.6em;
+          font-size: 0.95rem;
         }
       }
     }
@@ -204,8 +205,8 @@ header {
           height: 50px;
         }
         .resume {
-          padding: .9em;
-          font-size: .7rem;
+          padding: 0.9em;
+          font-size: 0.7rem;
         }
       }
     }
@@ -218,13 +219,93 @@ PROJECTS
 ===============
 */
 
+.projects {
+  @include flex-column(center);
+  width: 100%;
+  margin-bottom: 2em;
+  h2 {
+    align-self: flex-start;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    font-family: 'Orbitron';
+    letter-spacing: 1px;
+  }
+  .projects-wrapper {
+    width: 100%;
+    .project {
+      @include flex-row(center);
+      width: 100%;
+      .project-img {
+        width: 50%;
+        h3 {
+          margin-bottom: 0.5em;
+        }
+        img {
+          width: 100%;
+          box-shadow: 0px 0px 5px #999;
+          border-radius: 2px;
+        }
+        .links {
+          @include flex-row(baseline);
+          a {
+            margin-right: 1em;
+            padding-left: 0.5em;
+            padding-right: 0.5em;
+            font-size: 0.8rem;
+            color: #fff;
+            background-color: #d32222;
+            border-radius: 2px;
+          }
+        }
+      }
+      .description {
+        width: 50%;
+        padding-left: 2em;
+        text-align: right;
+        p {
+          font-weight: 300;
+        }
+      }
+    }
+    .project:nth-child(even) {
+      flex-direction: row-reverse;
+      .project-img {
+        h3 {
+          text-align: right;
+        }
+        .links {
+          flex-direction: row-reverse;
+          a {
+            margin-right: 0;
+            margin-left: 1em;
+          }
+        }
+      }
+      .description {
+        text-align: left;
+        padding-left: 0;
+        padding-right: 2em;
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 599px) {
 }
 @media screen and (min-width: 600px) {
+  .projects {
+    max-width: 600px;
+  }
 }
 @media screen and (min-width: 900px) {
+  .projects {
+    max-width: 900px;
+  }
 }
 @media screen and (min-width: 1200px) {
+  .projects {
+    max-width: 1200px;
+  }
 }
 
 /*
@@ -232,6 +313,13 @@ PROJECTS
 FOOTER
 ===============
 */
+
+footer {
+  display: flex;
+  width: 100%;
+  height: 100px;
+  background-color: #333333;
+}
 
 @media screen and (max-width: 599px) {
 }
