--- a/media/styles.css
+++ b/media/styles.css
@@ -239,7 +239,8 @@ PROJECTS
       -webkit-box-align: center;
           -ms-flex-align: center;
               align-items: center;
-      width: 100%; }
+      width: 100%;
+      margin-bottom: 2em; }
       .projects .projects-wrapper .project .project-img {
         width: 50%; }
         .projects .projects-wrapper .project .project-img h3 {
@@ -289,6 +290,8 @@ PROJECTS
         text-align: left;
         padding-left: 0;
         padding-right: 2em; }
+    .projects .projects-wrapper .project:last-child {
+      margin-bottom: 0; }
 
 @media screen and (min-width: 600px) {
   .projects {
