--- a/media/styles.scss
+++ b/media/styles.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Orbitron:400,500,700,900|Roboto:100,300,400,500,700,900&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Orbitron:400,500,700,900|Roboto:100,300,400,500,700,900&display=swap");
 
 /*
 ===============
@@ -32,7 +32,7 @@ COMMON
 */
 :root {
   font-size: 1em;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: $text-color;
   box-sizing: border-box;
 }
@@ -227,7 +227,7 @@ PROJECTS
     align-self: flex-start;
     margin-top: 1em;
     margin-bottom: 1em;
-    font-family: 'Orbitron';
+    font-family: "Orbitron";
     letter-spacing: 1px;
   }
   .projects-wrapper {
@@ -262,7 +262,7 @@ PROJECTS
       .description {
         width: 50%;
         padding-left: 2em;
-        text-align: right;
+        text-align: left;
         p {
           font-weight: 300;
         }
