--- a/sensum/scss/_hero.scss
+++ b/sensum/scss/_hero.scss
@@ -3,7 +3,7 @@
   width: 100%;
   min-height: 90vh;
   height: 100%;
-  background: url(../img/conf3.png) no-repeat;
+  background: url(.././img/conf3.png) no-repeat;
   background-position: center;
   background-size: cover;
 }
