--- a/sensum/styles.css
+++ b/sensum/styles.css
@@ -88,7 +88,7 @@ header {
   width: 100%;
   min-height: 90vh;
   height: 100%;
-  background: url(../img/conf3.png) no-repeat;
+  background: url(.././img/conf3.png) no-repeat;
   background-position: center;
   background-size: cover; }
 
