--- a/sensum/scss/_hero.scss
+++ b/sensum/scss/_hero.scss
@@ -3,10 +3,11 @@
   width: 100%;
   min-height: 90vh;
   height: 100%;
-  background-image: url("sensum/img/conf3.png");
+  background-image: url(../img/conf3.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  background-attachment: fixed;
 }
 .hero__wrapper {
   //   @include flex-box-col-center-all();
