Fixed disapearing bgr-img -> ../ to ./ :)

--- a/sensum/scss/_holiday.scss
+++ b/sensum/scss/_holiday.scss
@@ -2,7 +2,7 @@
   @include flex-box-col-center();
   padding-top: 6em;
   padding-bottom: 6em;
-  background-image: url(../img/celebration.jpg);
+  background-image: url(./img/celebration.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
