Add Section Clients & Slider

--- a/sensum/scss/_hero.scss
+++ b/sensum/scss/_hero.scss
@@ -9,11 +9,11 @@
   background-size: cover;
   background-attachment: fixed;
 }
-.hero__wrapper {
-  //   @include flex-box-col-center-all();
-}
-.hero__bss-logo {
-}
+// .hero__wrapper {
+//   //   @include flex-box-col-center-all();
+// }
+// .hero__bss-logo {
+// }
 .hero__head {
   font-family: "Roboto", sans-serif;
   font-size: 4rem;
