--- a/sensum/scss/styles.scss
+++ b/sensum/scss/styles.scss
@@ -72,3 +72,8 @@ $red-color: #b10820;
     HOLIDAY
  ================= */
 @import "scss/holiday";
+
+/* =================
+    CLIENTS
+ ================= */
+@import "scss/clients";
