--- a/sensum/scss/_holiday.scss
+++ b/sensum/scss/_holiday.scss
@@ -19,6 +19,9 @@
 }
 
 @media screen and (max-width: 599px) {
+  .holiday__head {
+    font-size: 1.3rem;
+  }
 }
 
 @media screen and (min-width: 600px) {
