--- a/sensum/scss/_lectors.scss
+++ b/sensum/scss/_lectors.scss
@@ -33,6 +33,15 @@
 }
 
 @media screen and (max-width: 599px) {
+  .lectors__wrapper {
+    flex-direction: column;
+    justify-content: flex-start;
+    flex-wrap: none;
+  }
+  .lectors__lector {
+    width: 100%;
+    margin-bottom: 2em;
+  }
 }
 
 @media screen and (min-width: 600px) {
