Fix HERO Add Footer

--- a/sensum/scss/_hero.scss
+++ b/sensum/scss/_hero.scss
@@ -3,8 +3,7 @@
   width: 100%;
   min-height: 90vh;
   height: 100%;
-  // background-image: url(./img/conf3.png);
-  // background-image: url(./img/zal.png);
+  background-image: url(./img/fon1.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
