--- a/sensum/scss/styles.scss
+++ b/sensum/scss/styles.scss
@@ -96,3 +96,8 @@ $red-color: #b10820;
     CLIENTS
  ================= */
 @import "scss/clients";
+
+/* =================
+    FOOTER
+ ================= */
+@import "scss/footer";
